syntax = "proto3";

import "google/protobuf/timestamp.proto"; 

option csharp_namespace = "GrpcCleanArchitecture.Proto";

service PersonService {
  rpc CreatePerson (CreatePersonRequest) returns (PersonResponse);
  rpc GetPersonById (PersonByIdRequest) returns (PersonResponse);
  rpc UpdatePerson (UpdatePersonRequest) returns (PersonResponse);
  rpc DeletePerson (PersonByIdRequest) returns (DeletePersonResponse);
}

message Person {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  google.protobuf.Timestamp birthDate = 5; 
}

message CreatePersonRequest {
  string firstName = 1;
  string lastName = 2;
  string nationalCode = 3;
  google.protobuf.Timestamp birthDate = 5; 
}

message PersonResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  google.protobuf.Timestamp birthDate = 5; 
}

message PersonByIdRequest {
  int32 id = 1;
}

message UpdatePersonRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
   google.protobuf.Timestamp birthDate= 5;
}

message DeletePersonResponse {
  bool success = 1;
}
